Disallow 'position: sticky' on <thead> and <tr> elements.

The implementation of in-flow positioned elements in Blink does not
support <thead> and <tr> as per the CSS 2.1 spec. This makes it
difficult to support position: sticky for them, so until Blink supports
CSS 3 positioning we should disallow it.

BUG=695179

Review-Url: https://codereview.chromium.org/2711803002
Cr-Commit-Position: refs/heads/master@{#453619}

Former-commit-id: d10f5767cbf8050a4d39a3f42306d58eab351cf7